anv: dEQP-VK.binding_model.buffer_device_address.set3.depth3.basessbo.convertcheck* slow
On Chrome OS CI is seeing intermittent timeouts on Geminilake (at least) in tests in the area of:
03/23 20:00:45.575 DEBUG| utils:0304| [stdout] dEQP-VK.binding_model.buffer_device_address.set3.depth3.basessbo.convertchecku64.nostore.multi.scalar.frag (50.93s)
03/23 20:00:45.576 DEBUG| utils:0304| [stdout] dEQP-VK.binding_model.buffer_device_address.set3.depth3.basessbo.convertchecku64.store.single.scalar.frag (50.72s)
03/23 20:00:45.576 DEBUG| utils:0304| [stdout] dEQP-VK.binding_model.buffer_device_address.set3.depth3.basessbo.convertchecku64.store.replay.scalar.frag (50.62s)
03/23 20:00:45.576 DEBUG| utils:0304| [stdout] dEQP-VK.binding_model.buffer_device_address.set3.depth3.baseubo.convertchecku64.store.single.scalar.frag (47.76s)
A perf record on my SKL suggests that we've got some algorithmic issue going on:
71.81% deqp-vk libvulkan_intel.so [.] instruction_scheduler::add_dep
9.05% deqp-vk libvulkan_intel.so [.] backend_instruction::remove
7.98% deqp-vk libvulkan_intel.so [.] backend_instruction::insert_before
1.63% deqp-vk libvulkan_intel.so [.] instruction_scheduler::add_barrier_deps